# DataSonar

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  end_to_end_test.py  package-lock.json  package.json  start-datasonar.ps1  stop-datasonar.ps1
.github/workflows/: ci.yml
docs/: expo-demo.md  flow-demo.md
frontend/: package-lock.json  package.json
frontend/public/: demo.html
frontend/stitch_assets/: api-health-status.html  details.html  mock-data-controls.html  pipelines.html
scripts/: check-infra.sh  init-db.sql  run_demo.ts  seed-mongo.js
services/alert-service/: Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
services/anomaly-detector/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/anomaly-detector/app/: __init__.py  main.py  processor.py
services/anomaly-detector/app/core/: config.py
services/anomaly-detector/app/infra/: kafka_consumer.py  minio_client.py  rabbitmq_producer.py
services/anomaly-detector/app/schemas/: __init__.py  alerts.py  events.py
services/anomaly-detector/app/services/: model_manager.py  outlier_detection.py  status_registry.py  time_series.py
services/anomaly-detector/tests/: test_outlier_detection.py  test_processor.py
services/dashboard-api/: Dockerfile  package-lock.json  package.json
services/gateway/: Dockerfile  jest.config.json  package-lock.json  package.json  prisma.config.ts  tsconfig.json
services/ingestion/: .eslintrc.cjs  Dockerfile  jest.config.json  nodemon.json  package-lock.json  package.json  tsconfig.json
(+107 files in other folders)
